# Omicron-Base

./: .gitignore  CMakeLists.txt  CreateEntity.py  Fonts.txt  README.md  bake_resources.py  config.omi_pref  resources.omi_h
lib/Utilitron/: FileUtil.hpp  MacroUtil.hpp  MathUtil.hpp  StringUtil.hpp  ThreadUtil.hpp  TimeUtil.hpp  TypeUtil.hpp  Vector.hpp
lib/Utilitron/exceptions/: ArrayException.hpp  Exception.hpp
res/gfx/shader/level/: effect_fragment.glsl  engine_trail_fragment.glsl  engine_trail_vertex.glsl
res/gfx/shader/omicron/: default_fragment.glsl  default_vertex.glsl  final_render_texture_fragment.glsl  glow_blur_hor_render_texture_fragment.glsl  glow_blur_render_texture_fragment.glsl  glow_blur_vert_render_texture_fragment.glsl  glow_first_pass_render_texture_fragment.glsl  glow_fragment.glsl  performance_motion_blur_fragment.glsl  render_texture_fragment.glsl  selection_fragment.glsl  selection_vertex.glsl  test_fragment.glsl  test_vertex.glsl
res/gfx/shader/test/: test_fragment.glsl  test_vertex.glsl
src/data/layers/: LevelLayers.hpp
src/entities/builder/: BoundaryScaffold.cpp  BoundaryScaffold.hpp  BuilderControl.cpp  BuilderControl.hpp  BuilderEnvironment.cpp  BuilderEnvironment.hpp
src/entities/builder/gui/: BlockSelect.cpp  BlockSelect.hpp
src/entities/gui/: Cursor.cpp  Cursor.hpp
src/entities/level/: Block.cpp  Block.hpp  Cave.cpp  Cave.hpp  EnemyShip.cpp  EnemyShip.hpp  Explosion.cpp  Explosion.hpp  PlayerShip.cpp  PlayerShip.hpp  Terrain.cpp  Terrain.hpp
src/entities/level/block/: BasicBlock.cpp  BasicBlock.hpp  Block.cpp  Block.hpp  CopperBlock.cpp  CopperBlock.hpp  EnemyHub.cpp  EnemyHub.hpp  GoldBlock.cpp  GoldBlock.hpp  PlayerHub.cpp  PlayerHub.hpp  RustyBlock.cpp  RustyBlock.hpp  SilverBlock.cpp  SilverBlock.hpp  SteelBlock.cpp  SteelBlock.hpp  TitaniumBlock.cpp  TitaniumBlock.hpp
src/entities/level/bullet/: Bullet.cpp  Bullet.hpp  CopperBullet.cpp  CopperBullet.hpp  GoldBullet.cpp  GoldBullet.hpp  RustyBullet.cpp  RustyBullet.hpp  SilverBullet.cpp  SilverBullet.hpp  SteelBullet.cpp  SteelBullet.hpp  TitaniumBullet.cpp  TitaniumBullet.hpp
src/entities/ship/: Block.cpp  Block.hpp  BlockFactory.hpp
src/entities/ship/builder_component/: BuilderComponent.cpp  BuilderComponent.hpp
src/entities/ship/connection_component/: ConnectionComponent.cpp  ConnectionComponent.hpp
src/entities/ship/draw_component/: DrawComponent.hpp  RandomStillDrawComp.cpp  RandomStillDrawComp.hpp  SpriteDrawComp.cpp  SpriteDrawComp.hpp
src/entities/start_up/: OmicronLogo.cpp  StartUpCamera.cpp  StartUpCamera.hpp
src/entities/test/: BoxTrail.cpp  BoxTrail.hpp  CameraControl.cpp  CameraControl.hpp  GlowCube.cpp  GlowCube.hpp  Human.cpp  Human.hpp  Monkey.cpp  Monkey.hpp  Player.cpp  Player.hpp  Skybox.cpp  Skybox.hpp  SpriteTest.cpp  SpriteTest.hpp  TestEntity.cpp  TestEntity.hpp  TestEnvironment.cpp  TestEnvironment.hpp  TestEvil.cpp  TestEvil.hpp  TestPlayer.cpp  TestPlayer.hpp  TestSun.cpp  TestSun.hpp
src/omicron/: Omicron.cpp  Omicron.hpp
src/omicron/audio/: MusicPlayer.cpp  MusicPlayer.hpp  SoundPool.cpp  SoundPool.hpp
src/omicron/component/: Camera.cpp  Camera.hpp  Component.hpp  Transform.hpp
src/omicron/component/light/: Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.hpp
src/omicron/component/physics/: CollisionChecker.cpp  CollisionChecker.hpp  CollisionDetector.cpp  CollisionDetector.hpp  Physics.hpp
src/omicron/component/renderable/: KeyFrameMesh.cpp  KeyFrameMesh.hpp  Mesh.cpp  Mesh.hpp  Renderable.cpp  Renderable.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/omicron/component/updatable/: Updatable.hpp
src/omicron/display/: Window.cpp  Window.hpp
src/omicron/entity/: ComponentTable.cpp  ComponentTable.hpp  Entity.hpp
src/omicron/entity/component/: Component.hpp  Transform.hpp
src/omicron/graphics/display/: Window.hpp
src/omicron/graphics/renderer/: Renderer.cpp  Renderer.hpp
src/omicron/input/: Input.hpp  Keyboard.cpp  Mouse.cpp
src/omicron/logic/: FPSManager.cpp  FPSManager.hpp  LogicManager.cpp  LogicManager.hpp
src/omicron/logic/entity/: Entity.hpp  EntityList.hpp
src/omicron/logic/fps_manager/: FPSManager.cpp  FPSManager.hpp
src/omicron/logic/scene/: Scene.cpp  Scene.hpp
src/omicron/physics/bounding/: BoundingCircle.hpp  BoundingShape.hpp
src/omicron/physics/collision_detect/: CollisionDetect.cpp  CollisionDetect.hpp
src/omicron/rendering/: RenderLists.cpp  RenderLists.hpp  Renderer.cpp  Renderer.hpp  VisibilityCheckThread.cpp  VisibilityCheckThread.hpp
src/omicron/rendering/lighting/: LightData.hpp  ShadowMap.cpp
src/omicron/rendering/object_data/: Geometry.hpp
src/omicron/rendering/render_texture/: FinalRenderTexture.cpp  GlowBlurHorRenderTexture.cpp  GlowBlurRenderTexture.cpp  GlowBlurRenderTexture.hpp  GlowBlurVertRenderTexture.cpp  GlowCollateRenderTexture.cpp  GlowFirstPassRenderTexture.cpp  GlowRenderTexture.cpp  GlowRenderTexture.hpp  RenderTexture.cpp  RenderTexture.hpp
src/omicron/rendering/shading/: Animation.cpp  Animation.hpp  Material.cpp  Material.hpp  Shader.cpp  Shader.hpp  Texture.cpp  (+1 more)
src/omicron/resource/: ResourceManager.cpp  ResourceManager.hpp  ResourceServer.cpp  ResourceServer.hpp  VirtualFile.cpp  VirtualFile.hpp
src/omicron/scene/: Scene.cpp  Scene.hpp
src/omicron/settings/: DisplaySettings.cpp  DisplaySettings.hpp  RenderSettings.cpp  RenderSettings.hpp  SystemSettings.cpp  SystemSettings.hpp
src/omicron/system/: System.cpp
src/omicron/utilities/: TransformUtil.hpp
src/override/: ResourceGroups.hpp  StartUp.cpp  StartUp.hpp  Values.hpp
src/override/start_up/: StartUp.cpp  StartUp.hpp
src/resource_pack/: AllPack.cpp  BuilderPack.cpp  LevelPack.cpp  Packs.hpp  ShipPack.cpp  StartUpPack.cpp  TestPack.cpp
src/scenes/: LevelScene.cpp  LevelScene.hpp  StartUpScene.cpp  StartUpScene.hpp  TestScene.cpp  TestScene.hpp
src/scenes/builder/: BuilderScene.cpp  BuilderScene.hpp
src/scenes/level/: LevelScene.cpp  LevelScene.hpp
src/scenes/start_up/: StartUpScene.cpp  StartUpScene.hpp
src/scenes/test/: TestScene.cpp  TestScene.hpp
(+34 files in other folders)
